<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scroll_view_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:scaleType="centerCrop"
    tools:context="com.example.android.aiquiz.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:focusableInTouchMode="true">

        <!-- Quiz title and illustration image-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/quiz_title"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:padding="7dp"
                android:textSize="45sp"
                android:gravity="center"
                android:textColor="#FFF"
                android:text="@string/quiz_title" />

            <ImageView
                android:id="@+id/quiz_icon"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:scaleType="centerInside"
                android:adjustViewBounds="true"
                android:src="@drawable/ic_ai"
                android:contentDescription="@string/quiz_icon"/>

        </LinearLayout>

        <!-- Quiz description -->

        <TextView
            android:id="@+id/quiz_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="15dp"
            android:text="@string/quiz_description"
            android:textColor="#FFF"
            android:textSize="21sp" />

        <TextView
            android:id="@+id/topics_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/topics_list"
            android:textColor="#64B5F6"
            android:textStyle="bold"
            android:textSize="25sp" />

        <!-- Name request -->

        <TextView
            android:id="@+id/text_request_player_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="10dp"
            android:layout_marginBottom="20dp"
            android:text="@string/player_name_request"
            android:textColor="#FFF"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/edit_player_name"
            style="@style/EditTextStyle"
            android:hint="@string/player_name_hint"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/text_display_player_name"
            style="@style/SavedEditTextStyle" />

        <Button
            android:id="@+id/button_save_edit_player_name"
            style="@style/SubmitButtonStyle"
            android:text="@string/save_player_name"
            android:onClick="save_edit_name" />

        <!--TOPIC #1-->

        <Button
            android:id="@+id/topic_section_1"
            style="@style/TopicStyle"
            android:text="@string/topic_section_1"
            android:onClick="jump_to_submit"/>

        <!--QUESTION #1-->

        <TextView
            android:id="@+id/question_heading_1"
            style="@style/QuestionHeadingStyle"
            android:text="@string/question_heading_1" />

        <TextView
            android:id="@+id/question_content_1"
            style="@style/QuestionContentStyle"
            android:text="@string/question_content_1" />

        <CheckBox
            android:id="@+id/q1aA"
            style="@style/AnswerStyle"
            android:text="@string/answer_A_question_1" />

        <CheckBox
            android:id="@+id/q1aB"
            style="@style/AnswerStyle"
            android:text="@string/answer_B_question_1" />

        <CheckBox
            android:id="@+id/q1aC"
            style="@style/AnswerStyle"
            android:text="@string/answer_C_question_1" />

        <CheckBox
            android:id="@+id/q1aD"
            style="@style/AnswerStyle"
            android:text="@string/answer_D_question_1" />

        <!--QUESTION #2-->

        <TextView
            android:id="@+id/question_heading_2"
            style="@style/QuestionHeadingStyle"
            android:text="@string/question_heading_2" />

        <TextView
            android:id="@+id/question_content_2"
            style="@style/QuestionContentStyle"
            android:text="@string/question_content_2" />

        <CheckBox
            android:id="@+id/q2aA"
            style="@style/AnswerStyle"
            android:text="@string/answer_A_question_2" />

        <CheckBox
            android:id="@+id/q2aB"
            style="@style/AnswerStyle"
            android:text="@string/answer_B_question_2" />

        <CheckBox
            android:id="@+id/q2aC"
            style="@style/AnswerStyle"
            android:text="@string/answer_C_question_2" />

        <CheckBox
            android:id="@+id/q2aD"
            style="@style/AnswerStyle"
            android:text="@string/answer_D_question_2" />

        <!--TOPIC #2-->

        <Button
            android:id="@+id/topic_section_2"
            style="@style/TopicStyle"
            android:text="@string/topic_section_2"
            android:onClick="jump_to_submit"/>

        <!--QUESTION #3-->

        <TextView
            android:id="@+id/question_heading_3"
            style="@style/QuestionHeadingStyle"
            android:text="@string/question_heading_3" />

        <TextView
            android:id="@+id/question_content_3"
            style="@style/QuestionContentStyle"
            android:text="@string/question_content_3" />

        <RadioGroup
            android:id="@+id/q3ABCD"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/q3aA"
                style="@style/AnswerStyle"
                android:text="@string/answer_A_question_3" />

            <RadioButton
                android:id="@+id/q3aB"
                style="@style/AnswerStyle"
                android:text="@string/answer_B_question_3" />

            <RadioButton
                android:id="@+id/q3aC"
                style="@style/AnswerStyle"
                android:text="@string/answer_C_question_3" />

            <RadioButton
                android:id="@+id/q3aD"
                style="@style/AnswerStyle"
                android:text="@string/answer_D_question_3" />

        </RadioGroup>

        <!--QUESTION #4-->

        <TextView
            android:id="@+id/question_heading_4"
            style="@style/QuestionHeadingStyle"
            android:text="@string/question_heading_4" />

        <TextView
            android:id="@+id/question_content_4"
            style="@style/QuestionContentStyle"
            android:text="@string/question_content_4" />

        <RadioGroup
            android:id="@+id/q4ABCD"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/q4aA"
                style="@style/AnswerStyle"
                android:text="@string/answer_A_question_4" />

            <RadioButton
                android:id="@+id/q4aB"
                style="@style/AnswerStyle"
                android:text="@string/answer_B_question_4" />

            <RadioButton
                android:id="@+id/q4aC"
                style="@style/AnswerStyle"
                android:text="@string/answer_C_question_4" />

            <RadioButton
                android:id="@+id/q4aD"
                style="@style/AnswerStyle"
                android:text="@string/answer_D_question_4" />

        </RadioGroup>

        <!--TOPIC #3-->

        <Button
            android:id="@+id/topic_section_3"
            style="@style/TopicStyle"
            android:text="@string/topic_section_3"
            android:onClick="jump_to_submit"/>

        <!--QUESTION #5-->

        <TextView
            android:id="@+id/question_heading_5"
            style="@style/QuestionHeadingStyle"
            android:text="@string/question_heading_5" />

        <TextView
            android:id="@+id/question_content_5"
            style="@style/QuestionContentStyle"
            android:text="@string/question_content_5" />

        <RadioGroup
            android:id="@+id/q5ABCD"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/q5aA"
                style="@style/AnswerStyle"
                android:text="@string/answer_A_question_5" />

            <RadioButton
                android:id="@+id/q5aB"
                style="@style/AnswerStyle"
                android:text="@string/answer_B_question_5" />

            <RadioButton
                style="@style/AnswerStyle"
                android:id="@+id/q5aC"
                android:text="@string/answer_C_question_5" />

            <RadioButton
                android:id="@+id/q5aD"
                style="@style/AnswerStyle"
                android:text="@string/answer_D_question_5" />

        </RadioGroup>

        <!--QUESTION #6-->

        <TextView
            android:id="@+id/question_heading_6"
            style="@style/QuestionHeadingStyle"
            android:text="@string/question_heading_6" />

        <TextView
            android:id="@+id/question_content_6"
            style="@style/QuestionContentStyle"
            android:text="@string/question_content_6" />

        <RadioGroup
            android:id="@+id/q6ABCD"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/q6aA"
                style="@style/AnswerStyle"
                android:text="@string/answer_A_question_6" />

            <RadioButton
                android:id="@+id/q6aB"
                style="@style/AnswerStyle"
                android:text="@string/answer_B_question_6" />

            <RadioButton
                android:id="@+id/q6aC"
                style="@style/AnswerStyle"
                android:text="@string/answer_C_question_6" />

            <RadioButton
                android:id="@+id/q6aD"
                style="@style/AnswerStyle"
                android:text="@string/answer_D_question_6" />

        </RadioGroup>

        <!--TOPIC #4-->

        <Button
            android:id="@+id/topic_section_4"
            style="@style/TopicStyle"
            android:text="@string/topic_section_4"
            android:onClick="jump_to_submit"/>

        <!--QUESTION #7-->

        <TextView
            android:id="@+id/question_heading_7"
            style="@style/QuestionHeadingStyle"
            android:text="@string/question_heading_7" />

        <TextView
            android:id="@+id/question_content_7"
            style="@style/QuestionContentStyle"
            android:text="@string/question_content_7" />

        <EditText
            android:id="@+id/edit_Q7_input"
            style="@style/EditTextStyle"
            android:hint="@string/answer_hint"
            android:inputType="text" />

        <TextView
            android:id="@+id/text_display_answer_7"
            style="@style/SavedEditTextStyle" />

        <Button
            android:id="@+id/button_save_edit_answer_7"
            style="@style/SubmitButtonStyle"
            android:text="@string/save_answer"
            android:onClick="save_edit_answer_7" />

        <!--QUESTION #8-->

        <TextView
            android:id="@+id/question_heading_8"
            style="@style/QuestionHeadingStyle"
            android:text="@string/question_heading_8" />

        <TextView
            android:id="@+id/question_content_8"
            style="@style/QuestionContentStyle"
            android:text="@string/question_content_8" />

        <CheckBox
            android:id="@+id/q8aA"
            style="@style/AnswerStyle"
            android:text="@string/answer_A_question_8" />

        <CheckBox
            android:id="@+id/q8aB"
            style="@style/AnswerStyle"
            android:text="@string/answer_B_question_8" />

        <CheckBox
            android:id="@+id/q8aC"
            style="@style/AnswerStyle"
            android:text="@string/answer_C_question_8" />

        <CheckBox
            android:id="@+id/q8aD"
            style="@style/AnswerStyle"
            android:text="@string/answer_D_question_8" />

        <!--TOPIC #5-->

        <Button
            android:id="@+id/topic_section_5"
            style="@style/TopicStyle"
            android:text="@string/topic_section_5"
            android:onClick="jump_to_submit"/>

        <!--QUESTION #9-->

        <TextView
            android:id="@+id/question_heading_9"
            style="@style/QuestionHeadingStyle"
            android:text="@string/question_heading_9" />

        <TextView
            android:id="@+id/question_content_9"
            style="@style/QuestionContentStyle"
            android:text="@string/question_content_9" />

        <EditText
            android:id="@+id/edit_Q9_input"
            style="@style/EditTextStyle"
            android:hint="@string/answer_hint"
            android:inputType="text" />

        <TextView
            android:id="@+id/text_display_answer_9"
            style="@style/SavedEditTextStyle" />

        <Button
            android:id="@+id/button_save_edit_answer_9"
            style="@style/SubmitButtonStyle"
            android:text="@string/save_answer"
            android:onClick="save_edit_answer_9" />

        <!--QUESTION #10-->

        <TextView
            android:id="@+id/question_heading_10"
            style="@style/QuestionHeadingStyle"
            android:text="@string/question_heading_10" />

        <TextView
            android:id="@+id/question_content_10"
            style="@style/QuestionContentStyle"
            android:text="@string/question_content_10" />

        <RadioGroup
            android:id="@+id/q10ABCD"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/q10aA"
                style="@style/AnswerStyle"
                android:text="@string/answer_A_question_10" />

            <RadioButton
                android:id="@+id/q10aB"
                style="@style/AnswerStyle"
                android:text="@string/answer_B_question_10" />

            <RadioButton
                android:id="@+id/q10aC"
                style="@style/AnswerStyle"
                android:text="@string/answer_C_question_10" />

            <RadioButton
                android:id="@+id/q10aD"
                style="@style/AnswerStyle"
                android:text="@string/answer_D_question_10" />

        </RadioGroup>

        <Button
            android:id="@+id/button_submit_answers"
            style="@style/SubmitButtonStyle"
            android:text="@string/submit_answers"
            android:onClick="submitAnswers" />

        <Button
            android:id="@+id/button_reset_quiz"
            style="@style/ResetButtonStyle"
            android:text="@string/reset_quiz"
            android:onClick="resetQuiz" />

    </LinearLayout>

</ScrollView>